feat: android adpu service 세팅 정리, stop nfc interface 추가

--- a/virtual_bridge/android/app/src/main/res/values/strings.xml
+++ b/virtual_bridge/android/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
 <!-- </resources> -->
 
 <resources>
-  <string name="servicedesc">servicedesc</string>
-  <string name="aiddescription">aiddescription</string>
+  <string name="servicedesc">digivice_virtual_bridge</string>
+  <string name="aiddescription">digivice_virtual_bridge</string>
 </resources>
